# stripe_model_training

./: .dockerignore  .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
deployment/: README.md  deploy_all_services.sh  deploy_training_only.sh  entrypoint.sh  entrypoint_old.sh  env_config.py  secret_manager.py  validate_env.py
docs/: README.md  api-endpoint-validation.md  api-production-guide.md  architecture.md  eda.md  gcp_commands.md  gcp_commands_2.md  instructions.md  mock-api_endpoints.md  model-api_endpoints.md  model_api+usage.md  predictions.md  preprocessing.md  quick-reference.md  screenshots-needed.md  train.md
mlflow_server/: Dockerfile
mlruns/0/: meta.yaml
mlruns/250773498674968951/: meta.yaml
mlruns/250773498674968951/65c8398b7fee444e8df49aa26c4c1de7/: meta.yaml
mock_realtime_api/: Dockerfile  main.py  requirements.txt
model_training_api/: Dockerfile  main.py  requirements.txt
model_training_api/src/: check_preproc_data.py  mlflow_config.py  predict.py  preprocessing.py  storage_utils.py  train.py  validate_model.py
model_training_api/utils/: file_io.py  storage_path.py
models/: catboost_model.cbm
notebooks/: 01_EDA.ipynb  02_check_encoding.ipynb
reports/: data_drift.html  data_drift.json  validation_report.json
src/: check_preproc_data.py  clean_mlruns.py  preprocessing.py  train.py
tests/: test_preprocessing.py
(+91 files in other folders)
