[project]
name = "model-training"
version = "0.1.0"
description = "Repo for fraud-detection model, bloc 3, Jedha certification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.8.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "gcsfs>=2025.5.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.3",
]
